...
}

private extension LocalizedStringKey {
    static var address: LocalizedStringKey { "Address:" }
    static var email: LocalizedStringKey { "Email:" }
    static var gender: LocalizedStringKey { "Gender:" }
    static var title: LocalizedStringKey { "Random User" }
    static var registrationDate: LocalizedStringKey { "Registered:" }
}

private extension String {
    static var defaultProfileImageName: String { "person.fill" }
}
...
                    Button {
                        dismiss()
                    } label: {
                        Image(systemName: "xmark")
                            .tint(Color.primary)
                    }
                    .accessibilityIdentifier("CloseDetailButton")
                }
            }
        }
    }
}

...
