...
                        loadMoreIfNeeded(for: user)
                    }
                }
            }
            .padding(.vertical, .smallPadding)
        }
        .accessibilityIdentifier("UsersList")
    }
}

struct SearchView: View {
    @State private var debounceTimer: Timer?
    @Binding var searchText: String
...
